--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         </section>
       
     </main>
-    <footer><p>Projeto da Érica</p></footer>
+    <footer>
+        <p>Projeto da Érica</p>
+    </footer>
+    <script type="module" src="Graficos/informacoesGlobais.js"></script>
 </body>
 </html>
