--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <footer>
         <p>Projeto da Érica</p>
     </footer>
+    <script type="module" src="Graficos/commom.js"></script>
     <script type="module" src="Graficos/informacoesGlobais.js"></script>
-    <script type="module" src="Graficos/quantidadedeUsuarios.js"></script>
+    <script type="module" src="Graficos/quantidadedeUsuarios.js"></script>  
 </body>
 </html>
